trunk/Archive/6905c51b81201d792d3ec6555081d87c-3b440a87a52fe2ae7c853c82f4c5144f/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:1:6: warning: unused parameter ‘p’ [-Wunused-parameter]
 void foo(int **p){}
      ^
main.cpp: In function ‘int main()’:
main.cpp:5:11: error: cannot convert ‘int (*)[20]’ to ‘int**’ for argument ‘1’ to ‘void foo(int**)’
     foo(&n);
           ^
